cmake_minimum_required(VERSION 3.5.0)
project(design VERSION 0.1.0 LANGUAGES C)

include(CTest)
enable_testing()

aux_source_directory(./source SourceFile)
add_executable(design ${SourceFile})
# add_compile_options(finput-charset=GBK)
# add_compile_options(-g)
SET(CMAKE_BUILD_TYPE "Debug")
# SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
# SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
# target_compile_options(design PRIVATE -fexec-charset=GBK)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
